Use KConfigDialogManager system instead of directly setting video format

BUG: 481390
(cherry picked from commit 5429d6b914009481a4f7d2df706c02438eca9690)